--- a/index.html
+++ b/index.html
@@ -103,19 +103,19 @@
     <div class="section">
         <h2>New York Times</h2>
         <div class="button-container">
-            <a href="#" class="button">Wordle</a>
-            <a href="#" class="button">Connections</a>
-            <a href="#" class="button">Strands</a>
-            <a href="#" class="button">Mini</a>
+            <a href="https://www.nytimes.com/games/wordle/index.html" class="button">Wordle</a>
+            <a href="https://www.nytimes.com/games/connections?GAMES_connectionsRollout_1130=1_ConnectionsV2" class="button">Connections</a>
+            <a href="https://www.nytimes.com/games/strands" class="button">Strands</a>
+            <a href="http://www.nytimes.com/crosswords/game/mini" class="button">Mini</a>
         </div>
     </div>
     <div class="section">
         <h2>Others</h2>
         <div class="button-container">
-            <a href="#" class="button">PlusWord</a>
-            <a href="#" class="button">Gisnep</a>
-            <a href="#" class="button">Guess the Game</a>
-            <a href="#" class="button">Heardle</a>
+            <a href="https://www.telegraph.co.uk/news/plusword/" class="button">PlusWord</a>
+            <a href="https://gisnep.com/" class="button">Gisnep</a>
+            <a href="https://guessthe.game/" class="button">Guess the Game</a>
+            <a href="https://www.flagle.io/" class="button">Flagle</a>
         </div>
     </div>
     <footer>
