--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
             font-family: 'Work Sans', sans-serif;
             margin: 0;
             padding: 0;
-            background: var(--black);
             color: #333;
             text-align: center;
+            background-color: #050505;
+            opacity: 0.8;
+            background-image:  linear-gradient(30deg, #010101 12%, transparent 12.5%, transparent 87%, #010101 87.5%, #010101), linear-gradient(150deg, #010101 12%, transparent 12.5%, transparent 87%, #010101 87.5%, #010101), linear-gradient(30deg, #010101 12%, transparent 12.5%, transparent 87%, #010101 87.5%, #010101), linear-gradient(150deg, #010101 12%, transparent 12.5%, transparent 87%, #010101 87.5%, #010101), linear-gradient(60deg, #01010177 25%, transparent 25.5%, transparent 75%, #01010177 75%, #01010177), linear-gradient(60deg, #01010177 25%, transparent 25.5%, transparent 75%, #01010177 75%, #01010177);
+            background-size: 20px 35px;
+            background-position: 0 0, 0 0, 10px 18px, 10px 18px, 0 0, 10px 18px;
         }
         
         h1 {
@@ -112,10 +116,12 @@
     <div class="section">
         <h2>Others</h2>
         <div class="button-container">
+            <a href="https://www.quizstreak.com/" class="button">QuizStreak</a>
             <a href="https://www.telegraph.co.uk/news/plusword/" class="button">PlusWord</a>
             <a href="https://gisnep.com/" class="button">Gisnep</a>
             <a href="https://guessthe.game/" class="button">Guess the Game</a>
             <a href="https://www.flagle.io/" class="button">Flagle</a>
+            <a href="https://learnedleague.com/" class="button">LearnedLeague</a>
         </div>
     </div>
     <footer>
